<resources>
    <string name="app_name">PicTools</string>
    <string name="long_press_to_copy_result">长按复制结果</string>
    <string name="input_text">输入文字</string>
    <string name="contents">内容</string>
    <string name="click_to_create">点击生成</string>
    <string name="click_to_save">点击保存</string>
    <string name="scan_failed">扫描失败</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="auto_color">自动选择颜色</string>
    <string name="barcode_size">大小(像素)</string>
    <string name="margin_px">内边距(像素)</string>
    <string name="data_dot_scale"><![CDATA[数据点缩放(0<数值<1.0f)]]></string>
    <string name="colordark_true_dots_dddddd">暗点颜色(真值点, #rrggbb)</string>
    <string name="colorlight_false_dots_dddddd">亮点颜色(假值点, #rrggbb)</string>
    <string name="select_image">选择图片</string>
    <string name="remove_image">移除图片</string>
    <string name="white_margin_on_background_image">给图片添加白色边框</string>
    <string name="binarize_background_image">背景图转换为黑白图片</string>
    <string name="binNumber"><![CDATA[转换阀值(0<值<255)]]></string>
    <string name="Background_image_removed">背景图移除成功</string>
    <string name="Background_image_added">背景图添加成功</string>
    <string name="qr_without_logo">未选择图片，将会生成普通QR二维码</string>
    <string name="select_barcode_format">选择二维码类型</string>
    <string name="format_tip">Logo二维码仅适用于QRcode 仅QRcode和PDF417可以保存中文</string>
    <string name="crop_square">裁剪图片为正方形</string>
    <string name="use_first_frame_size">第一帧尺寸作为gif尺寸</string>
    <string name="crop_pic">选择图片时裁剪</string>
    <string name="add_pic">添加图片</string>
    <string name="add_finish">添加完成</string>
    <string name="height">高度</string>
    <string name="width">宽度</string>
    <string name="frame_delay">帧延迟(ms)</string>
    <string name="no_bg_img">未选择背景图</string>
    <string name="big_gif">大图片模式</string>
    <string name="select_gif">选择gif</string>
    <string name="use_dither">使用dither</string>
    <string name="create_gif">生成gif</string>
    <string name="size">大小(像素)</string>
    <string name="no_camera_permission">请允许访问摄像头后重试</string>
    <string name="scan_tip">将二维码置于框内即自动扫描</string>
    <string name="create_awesomeqr">生成AwesomeQR</string>
    <string name="read_screenshot">自动读取屏幕截图中的二维码</string>
	
		<string name="link">输入动图ID</string>
		<string name="download">下载</string>
		<string name="download_success">下载完成</string>
		<string name="downloading">正在下载</string>
		<string name="look_as_web">在网页中查看该链接</string>
		<string name="look_downloaded">查看已下载的文件</string>
		<string name="settings">设置</string>
		<string name="maybe_need_login">读取失败，可能需要登录</string>
		<string name="file_exist">文件已存在:</string>
		<string name="gif_width">GIF宽度：</string>
		<string name="gif_height">GIF高度</string>
		<string name="gif_delay">间隔</string>
		<string name="gif_quality">质量</string>
		<string name="update_content">更新内容</string>
		<string name="update_content_text_1_4_1">V1.4.1：\n部分UI修改\n\n</string>
		<string name="update_content_text_1_4">V1.4：\n提高制作GIF时的兼容性\n\n</string>
		<string name="update_content_text_1_3_2">V1.3.2：\n部分UI修改\n\n</string>
		<string name="update_content_text_1_3_1">V1.3.1：\n提高兼容性\n\n</string>
		<string name="update_content_text_1_3">V1.3：\n自定义使用的文件夹\n临时文件控制\n可设置是否自动读取剪贴板中的链接\n部分UI修改\n\n</string>
		<string name="update_content_text_1_2_1">V1.2.1：\n修正生成的GIF不会出现在图库中的问题\n修正自动填写URL有时导致崩溃的问题\n\n</string>
		<string name="update_content_text_1_2">V1.2：\n自动读取剪贴板中的链接\n增加了使用PixivID查找图片\n部分UI修改\n\n</string>
		<string name="update_content_text_1_1">V1.1：\n可以多线程下载并显示进度\n</string>
	
</resources>
