<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ran="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/qr_mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/qr_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="@string/example"
                ran:textviewText="@string/input" />

            <TextView
                android:id="@+id/qr_main_imgPathTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qr_without_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/qr_ButtonSelectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_image" />

                <Button
                    android:id="@+id/qr_ButtonRemoveImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remove_image" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/qr_main_autoColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/auto_pick_color" />

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/qr_main_colorDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ran:edittextHint="#000000"
                ran:textviewText="@string/colordark_true_dots_dddddd" />

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/qr_main_colorLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ran:edittextHint="#ffffff"
                ran:textviewText="@string/colorlight_false_dots_dddddd" />


            <Button
                android:id="@+id/qr_ButtonCreate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_create" />

            <Button
                android:id="@+id/qr_ButtonSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_save"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/qr_imageview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
