<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ran="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/awesomeqr_main_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/awesomeqr_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="@string/input_text"
                ran:textviewText="@string/contents" />

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/awesomeqr_main_mengEdittext_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="800"
                ran:textviewText="@string/size_px_includes_the_margin_width_equals_to_height" />

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/awesomeqr_main_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="20"
                ran:textviewText="@string/margin_px" />

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/awesomeqr_main_dotScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="0.3"
                ran:textviewText="@string/data_dot_scale_0_lt_scale_lt_1_0f" />

            <CheckBox
                android:id="@+id/awesomeqr_main_autoColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/auto_pick_color" />

            <LinearLayout
                android:id="@+id/awesomeqr_main_select_color_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.meng.qrtools.views.mengEdittext
                    android:id="@+id/awesomeqr_main_colorDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ran:edittextHint="#000000"
                    ran:textviewText="@string/colordark_true_dots_dddddd" />

                <com.meng.qrtools.views.mengEdittext
                    android:id="@+id/awesomeqr_main_colorLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ran:edittextHint="#ffffff"
                    ran:textviewText="@string/colorlight_false_dots_dddddd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
					android:visibility="gone"
                    android:id="@+id/awesomeqr_main_imgPathTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="未选择背景图" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/awesomeqr_main_backgroundImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select_image" />

                    <Button
                        android:id="@+id/awesomeqr_main_removeBackgroundImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/remove_image" />
                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/awesomeqr_main_whiteMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/white_margin_on_background_image" />

            <CheckBox
                android:id="@+id/awesomeqr_main_binarize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binarize_background_image" />

            <com.meng.qrtools.views.mengEdittext
                android:id="@+id/awesomeqr_main_mengEdittext_binarizeThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ran:edittextHint="128"
                ran:textviewText="@string/binarizethreshold_0_lt_threshold_lt_255" />

            <Button
                android:id="@+id/awesomeqr_main_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_create" />

            <Button
                android:id="@+id/awesomeqr_mainButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_save"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/awesomeqr_main_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
